[package]
name = "mklink"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
nix = "0.15.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
