[package]
name = "mklink"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = { version = "0.3.2", features = [ "paw" ] }
paw = "1.0.0"
junction = "0.1.2"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
