[package]
name = "mklink"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"
description = "A mklink binary (not through cmd.exe) for Windows and a Linux version for WSL to create Windows-WSL compatible symlinks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = {version = "0.3.2", features = ["paw"]}
paw = "1.0.0"
junction = "0.1.2"
serde = {version = "1.0.101", features = ["derive"]}
bincode = "1.2.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
